--- a/src/main/resources/.gitignore
+++ b/src/main/resources/.gitignore
@@ -1,1 +1,7 @@
 Envelope.avsc
+AppMessage.avsc
+AuthenticatedMessage.avsc
+AuthenticatedMessageHeader.avsc
+HoldingIdentity.avsc
+UnauthenticatedMessage.avsc
+UnauthenticatedMessageHeader.avsc
