--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+        <corda.url>https://raw.githubusercontent.com/corda/corda-api/release/os/5.0/data/avro-schema/src/main/resources/avro/net/corda/data</corda.url>
     </properties>
 
     <repositories>
@@ -73,18 +74,71 @@
                 </executions>
             </plugin>
 
+
+
+
+
+
+
             <plugin>
                 <groupId>com.googlecode.maven-download-plugin</groupId>
                 <artifactId>download-maven-plugin</artifactId>
                 <version>1.3.0</version>
                 <executions>
                     <execution>
-                        <goals>
-                            <goal>wget</goal>
-                        </goals>
+                        <id>1</id>
+                        <goals><goal>wget</goal></goals>
                         <configuration>
-                            <url>https://raw.githubusercontent.com/corda/corda-api/release/os/5.0/data/avro-schema/src/main/resources/avro/net/corda/data/AvroEnvelope.avsc</url>
+                            <url>${corda.url}/AvroEnvelope.avsc</url>
                             <outputFileName>Envelope.avsc</outputFileName>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>2</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/identity/HoldingIdentity.avsc</url>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>3</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/p2p/app/AppMessage.avsc</url>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>4</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/p2p/app/AuthenticatedMessage.avsc</url>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>5</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/p2p/app/AuthenticatedMessageHeader.avsc</url>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>6</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/p2p/app/UnauthenticatedMessage.avsc</url>
+                            <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>7</id>
+                        <goals><goal>wget</goal></goals>
+                        <configuration>
+                            <url>${corda.url}/p2p/app/UnauthenticatedMessageHeader.avsc</url>
                             <outputDirectory>${project.build.sourceDirectory}/../resources/</outputDirectory>
                         </configuration>
                     </execution>
